# mqtt-example

./: .gitignore
basic/exercise/: Cargo.toml
basic/exercise/.cargo/: config.toml
basic/exercise/examples/: solution_publ.rs
basic/exercise/src/: main.rs  wifi.rs
exercise/examples/: solution_publ_rcv.rs
host-client/: Cargo.toml
host-client/src/: main.rs
rufi-example/esp-client/: .gitignore  Cargo.toml
rufi-example/esp-client/.cargo/: config.toml
rufi-example/esp-client/src/: main.rs
rufi-example/sim-client/: Cargo.toml
