[package]
name = "esp-client"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow        = "=1.0.75"
embedded-svc  = "=0.26.4"
esp-idf-svc   = "=0.47.3"
log           = "=0.4.20"
shtcx         = "=0.11.0"
toml-cfg      = "=0.1.3"
rf-core = "0.5.1"
rf-distributed = "0.5.1"
rf-distributed-esp = { git = "https://github.com/lm98/rf-distributed-esp", branch = "master" }
rufi_gradient = "2.0.10"
serde_json = "1.0.111"

[build-dependencies]
embuild  = "=0.31.4"
toml-cfg = "=0.1.3"
